added deploy command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	},
 	"scripts": {
 		"dev": "nodemon server.js",
-		"start": "node server.js"
+		"start": "node server.js",
+		"deploy": "pm2 start server.js"
 	},
 	"author": "Paul Tiry (tirypaul@gmail.com)",
 	"license": "ISC",
